fix table spacing

--- a/assets/styles/override.scss
+++ b/assets/styles/override.scss
@@ -18,3 +18,7 @@ body {
       margin-left: 0px;
     }
   }
+
+table {
+  margin-bottom: 1.0rem;
+}
